--- a/css/General.css
+++ b/css/General.css
@@ -63,13 +63,29 @@ body {
   fill: #4c4d5f;
 }
 
-.blueSquare{
-    position: absolute;
-    top: -300px;
-    right: -100px;
-    z-index: -1;
-    rotate: 45deg;
-    width: 1400px;
-    height: 1400px;
-    background-color: #75c1ff1a;
+.blueSquare {
+  position: absolute;
+  top: -300px;
+  right: -100px;
+  z-index: -1;
+  rotate: 45deg;
+  width: 1400px;
+  height: 1400px;
+  background-color: #75c1ff1a;
+}
+
+.small {
+  font-variant: small-caps;
+  font-size: 25px;
+}
+
+.xsmall {
+  font-variant: small-caps;
+  font-size: 16px;
+}
+
+.up {
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
