Fully responsive but crashed some things
mobile responsive but i crashed some things in desktop

--- a/css/General.css
+++ b/css/General.css
@@ -89,3 +89,15 @@ body {
   top: 0px;
   left: 0px;
 }
+
+@media screen and (max-width: 950px) {
+  body {
+    width: 100%;
+    overflow-x: hidden;
+    width: 100dvw;
+  }
+
+  .blueSquare {
+    display: none;
+  }
+}
