--- a/css/header.css
+++ b/css/header.css
@@ -5,8 +5,11 @@ nav {
   height: 80px;
   z-index: 90;
   margin-bottom: 200px;
+  width: 100%;
   box-shadow: 0.25rem 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
   background-color: #ffffff;
+  position: fixed;
+  top: 0;
 }
 
 .logo {
@@ -53,12 +56,6 @@ nav {
   fill: #000;
 }
 
-@media screen and (max-width: 1150px) {
-  .logo {
-    font-size: 1.75em;
-  }
-}
-
 .open__btn svg {
   width: 3rem;
   height: 3rem;
@@ -69,10 +66,17 @@ nav {
   fill: #000;
 }
 
+@media screen and (max-width: 1150px) {
+  .logo {
+    font-size: 1.75em;
+  }
+}
+
 @media screen and (max-width: 950px) {
   nav {
+    width: 100dvw;
+    position: relative;
     justify-content: space-between;
-    padding: 0 25px;
   }
 
   .open__btn {
