--- a/css/header.css
+++ b/css/header.css
@@ -74,6 +74,9 @@ nav {
 
 @media screen and (max-width: 950px) {
   nav {
+    margin: 0 0 100px 0;
+    box-sizing: border-box;
+    padding: 0 20px;
     width: 100dvw;
     position: relative;
     justify-content: space-between;
